--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -52,7 +52,7 @@ auto_viteribi.h
 bar_pt.h
 buffer.h
 #buffers_buffer.h
-#buffers_data.h
+buffers_data.h
 #byte_buffer_buffer.h
 byte_buffer.h
 created_data.h
