--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "external/sep-ioLibs"]
 	path = external/sep-ioLibs
 	url = http://cees-gitlab.Stanford.EDU/SEP-external/sep-iolibs.git
+	dirty = true
