--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,9 +75,9 @@ if(BUILD_TEST)
 endif(BUILD_TEST)
 
 if(BUILD_SEP)
-add_subdirectory(external/sep-ioLibs)
+add_subdirectory(external/sep-iolibs)
 else(BUILD_SEP)
-add_subdirectory(external/sep-ioLibs/external/genericIO)
+add_subdirectory(external/sep-iolibs/external/genericIO)
 endif(BUILD_SEP)
 add_subdirectory(lib)
 add_subdirectory(python)
