moved to github

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "external/sep-iolibs"]
 	path = external/sep-iolibs
-	url = http://zapad.stanford.edu/SEP-external/sep-iolibs.git
+	url = https://github.com/SEP-software/sep-iolibs.git
+
